2005-10-01  Benhur Stein <benhur@inf.ufsm.br>
        * StatViewer/StatViewer.m: forgot on previous commit

2005-10-01  Benhur Stein <benhur@inf.ufsm.br>
        * StatViewer/PieCell.m: autosize pie; draw arc around "other" value.

2005-10-01  Benhur Stein <benhur@inf.ufsm.br>
        * SpaceTimeViewer/STEntityTypeLayout.[hm],
          SpaceTimeViewer/STLayoutEditor.{h,m,gorm}: keep user drawName choice;
          add choice for drawing pseudo-3D lines for variables

2005-10-01  Benhur Stein <benhur@inf.ufsm.br>
	* General/PajeEntityInspector.m: add inspection of new data and
	  aggregate events and states

2005-09-30  Benhur Stein <benhur@inf.ufsm.br>
        * General/Filter.[hm]: add new query methods to support aggregates
          - (BOOL)isAggregateEntity:(id<PajeEntity>)entity;
          - (unsigned)subCountForEntity:(id<PajeEntity>)entity;
          - (NSColor *)subColorAtIndex:(unsigned)index
                             forEntity:(id<PajeEntity>)entity;
          - (NSString *)subNameAtIndex:(unsigned)index
                             forEntity:(id<PajeEntity>)entity;
          - (double)subDurationAtIndex:(unsigned)index
                             forEntity:(id<PajeEntity>)entity;
          - (unsigned)subCountAtIndex:(unsigned)index
                            forEntity:(id<PajeEntity>)entity;
        * General/PajeEntity.[hm]: add similar methods for entity
        * General/Protocols.h: likewise
        * StorageController/AnchorFilter.m: likewise
        * StorageController/Aggregate{Event,State}.[hm],
          StorageController/{Event,State}Aggregator.[hm]: new classes
        * StorageController/Encapsulate.m: use aggregator classes when
          minDuration is big enough
        * StorageController/GNUmakefile: add new classes

2005-09-30  Benhur Stein <benhur@inf.ufsm.br>
        * StorageController/Encapsulate.m: forgotten change to minDuration

2005-09-30  Benhur Stein <benhur@inf.ufsm.br>