@@ -1,4 +1,7 @@
 2005-10-01  Benhur Stein <benhur@inf.ufsm.br>
+        * SpaceTimeViewer/DrawView+Drawing.m: new drawing code for variables
+
+2005-10-01  Benhur Stein <benhur@inf.ufsm.br>
         * StatViewer/StatViewer.m: forgot on previous commit
 
 2005-10-01  Benhur Stein <benhur@inf.ufsm.br>
